--- a/module_3_models.rmd
+++ b/module_3_models.rmd
@@ -15,10 +15,11 @@ load("./data/data_r_in_num.RData")
 # Exploring correlations in data
 ```{r}
 dlist <- list(
-      Population = as.integer(d_in$Survey_population),
-      Returned = as.integer(d_in$Survey_returned),
+      Population = as.numeric(d_in$Survey_population),
+      Population_s = standardize(as.numeric(d_in$Survey_population)),
+      Returned = as.numeric(d_in$Survey_returned),
+      Returned_s = standardize(as.numeric(d_in$Survey_returned)),
       StudyPeriod = as.integer(d_in$study_period),
-      Size = as.integer(d_in$Survey_population),
       Swedish = as.integer(d_in$Swedish),
       Overall_s = standardize(as.numeric(d_in$Overall)),
       Prereq_s = standardize(as.numeric(d_in$Prerequisites)),
@@ -35,12 +36,13 @@ dlist <- list(
 ```
 
 ```{r}
-model_m1 <- ulam(log_lik=TRUE,
+model_moverall <- ulam(log_lik=TRUE,
       alist(
       Overall_s ~ dnorm(mu, sigma),
-      mu <- a_s[StudyPeriod] + a[Swedish] + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_w * Workload_s + b_e * Equality_s,
-      a_s[StudyPeriod] ~ dnorm(0, 1),
+      mu <- a[Swedish] + b_pop * Population_s + b_ret * Returned_s + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_w * Workload_s + b_e * Equality_s,
       a[Swedish] ~ dnorm(0, 1),
+      b_pop ~ dnorm(0, 1),
+      b_ret ~ dnorm(0, 1),
       b_p ~ dnorm(0, 1),
       b_l ~ dnorm(0, 1),
       b_s ~ dnorm(0, 1),
@@ -57,37 +59,64 @@ model_m1 <- ulam(log_lik=TRUE,
 ```
 
 ```{r}
-model_mequality_new <- ulam(log_lik=TRUE,
+model_mprereq <- ulam(log_lik=TRUE,
       alist(
-      Equality_s ~ dnorm(mu, sigma),
-      mu <- a[Swedish] + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_w * Workload_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s,
+      Prereq_s ~ dnorm(mu, sigma),
+      mu <- a[Swedish] + b_pop * Population_s + b_ret * Returned_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_w * Workload_s + b_e * Equality_s,
       a[Swedish] ~ dnorm(0, 1),
-      b_p ~ dnorm(0, 1),
+      b_pop ~ dnorm(0, 1),
+      b_ret ~ dnorm(0, 1),
       b_l ~ dnorm(0, 1),
       b_s ~ dnorm(0, 1),
       b_t ~ dnorm(0, 1),
-      b_w ~ dnorm(0, 1),
       b_li ~ dnorm(0, 1),
       b_a ~ dnorm(0, 1),
       b_ad ~ dnorm(0, 1),
+      b_w ~ dnorm(0, 1),
+      b_e ~ dnorm(0, 1),
       sigma ~ dexp(1)
       ), data = dlist, chains = 2, cores = 2
+
 )
 ```
 
 ```{r}
-model_mwork <- ulam(log_lik=TRUE,
+model_mlearningout <- ulam(log_lik=TRUE,
       alist(
-      Workload_s ~ dnorm(mu, sigma),
-      mu <- a[Swedish] + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_e * Equality_s,
+      LearningOut_s ~ dnorm(mu, sigma),
+      mu <- a[Swedish] + b_pop * Population_s + b_ret * Returned_s + b_p * Prereq_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_w * Workload_s + b_e * Equality_s,
       a[Swedish] ~ dnorm(0, 1),
+      b_pop ~ dnorm(0, 1),
+      b_ret ~ dnorm(0, 1),
       b_p ~ dnorm(0, 1),
-      b_l ~ dnorm(0, 1),
       b_s ~ dnorm(0, 1),
       b_t ~ dnorm(0, 1),
       b_li ~ dnorm(0, 1),
       b_a ~ dnorm(0, 1),
       b_ad ~ dnorm(0, 1),
+      b_w ~ dnorm(0, 1),
+      b_e ~ dnorm(0, 1),
+      sigma ~ dexp(1)
+      ), data = dlist, chains = 2, cores = 2
+
+)
+```
+
+```{r}
+model_mstruct <- ulam(log_lik=TRUE,
+      alist(
+      Structure_s ~ dnorm(mu, sigma),
+      mu <- a[Swedish] + b_pop * Population_s + b_ret * Returned_s + b_p * Prereq_s + b_l * LearningOut_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_w * Workload_s + b_e * Equality_s,
+      a[Swedish] ~ dnorm(0, 1),
+      b_pop ~ dnorm(0, 1),
+      b_ret ~ dnorm(0, 1),
+      b_p ~ dnorm(0, 1),
+      b_l ~ dnorm(0, 1),
+      b_t ~ dnorm(0, 1),
+      b_li ~ dnorm(0, 1),
+      b_a ~ dnorm(0, 1),
+      b_ad ~ dnorm(0, 1),
+      b_w ~ dnorm(0, 1),
       b_e ~ dnorm(0, 1),
       sigma ~ dexp(1)
       ), data = dlist, chains = 2, cores = 2
@@ -99,8 +128,10 @@ model_mwork <- ulam(log_lik=TRUE,
 model_mteach <- ulam(log_lik=TRUE,
       alist(
       Teaching_s ~ dnorm(mu, sigma),
-      mu <- a[Swedish] + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_w * Workload_s + b_e * Equality_s,
+      mu <- a[Swedish] + b_pop * Population_s + b_ret * Returned_s + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_w * Workload_s + b_e * Equality_s,
       a[Swedish] ~ dnorm(0, 1),
+      b_pop ~ dnorm(0, 1),
+      b_ret ~ dnorm(0, 1),
       b_p ~ dnorm(0, 1),
       b_l ~ dnorm(0, 1),
       b_s ~ dnorm(0, 1),
@@ -116,17 +147,17 @@ model_mteach <- ulam(log_lik=TRUE,
 ```
 
 ```{r}
-model_mtreturn <- ulam(log_lik=TRUE,
+model_mlit <- ulam(log_lik=TRUE,
       alist(
-      Returned ~ dbinom(Population, p),
-      logit(p) <- a[StudyPeriod] + b_o * Overall_s + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_w * Workload_s + b_e * Equality_s,
-      a[StudyPeriod] ~ dnorm(0, 1),
-      b_o ~ dnorm(0, 1),
+      Literature_s ~ dnorm(mu, sigma),
+      mu <- a[Swedish] + b_pop * Population_s + b_ret * Returned_s + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_a * Assessment_s + b_ad * Admin_s + b_w * Workload_s + b_e * Equality_s,
+      a[Swedish] ~ dnorm(0, 1),
+      b_pop ~ dnorm(0, 1),
+      b_ret ~ dnorm(0, 1),
       b_p ~ dnorm(0, 1),
       b_l ~ dnorm(0, 1),
       b_s ~ dnorm(0, 1),
       b_t ~ dnorm(0, 1),
-      b_li ~ dnorm(0, 1),
       b_a ~ dnorm(0, 1),
       b_ad ~ dnorm(0, 1),
       b_w ~ dnorm(0, 1),
@@ -136,6 +167,94 @@ model_mtreturn <- ulam(log_lik=TRUE,
 
 )
 ```
+
+```{r}
+model_massess <- ulam(log_lik=TRUE,
+      alist(
+      Assessment_s ~ dnorm(mu, sigma),
+      mu <- a[Swedish] + b_pop * Population_s + b_ret * Returned_s + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_ad * Admin_s + b_w * Workload_s + b_e * Equality_s,
+      a[Swedish] ~ dnorm(0, 1),
+      b_pop ~ dnorm(0, 1),
+      b_ret ~ dnorm(0, 1),
+      b_p ~ dnorm(0, 1),
+      b_l ~ dnorm(0, 1),
+      b_s ~ dnorm(0, 1),
+      b_t ~ dnorm(0, 1),
+      b_li ~ dnorm(0, 1),
+      b_ad ~ dnorm(0, 1),
+      b_w ~ dnorm(0, 1),
+      b_e ~ dnorm(0, 1),
+      sigma ~ dexp(1)
+      ), data = dlist, chains = 2, cores = 2
+
+)
+```
+
+```{r}
+model_madmin <- ulam(log_lik=TRUE,
+      alist(
+      Admin_s ~ dnorm(mu, sigma),
+      mu <- a[Swedish] + b_pop * Population_s + b_ret * Returned_s + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_w * Workload_s + b_e * Equality_s,
+      a[Swedish] ~ dnorm(0, 1),
+      b_pop ~ dnorm(0, 1),
+      b_ret ~ dnorm(0, 1),
+      b_p ~ dnorm(0, 1),
+      b_l ~ dnorm(0, 1),
+      b_s ~ dnorm(0, 1),
+      b_t ~ dnorm(0, 1),
+      b_li ~ dnorm(0, 1),
+      b_a ~ dnorm(0, 1),
+      b_w ~ dnorm(0, 1),
+      b_e ~ dnorm(0, 1),
+      sigma ~ dexp(1)
+      ), data = dlist, chains = 2, cores = 2
+)
+```
+
+```{r}
+model_mwork <- ulam(log_lik=TRUE,
+      alist(
+      Workload_s ~ dnorm(mu, sigma),
+      mu <- a[Swedish] + b_pop * Population_s + b_ret * Returned_s + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_e * Equality_s,
+      a[Swedish] ~ dnorm(0, 1),
+      b_pop ~ dnorm(0, 1),
+      b_ret ~ dnorm(0, 1),
+      b_p ~ dnorm(0, 1),
+      b_l ~ dnorm(0, 1),
+      b_s ~ dnorm(0, 1),
+      b_t ~ dnorm(0, 1),
+      b_li ~ dnorm(0, 1),
+      b_a ~ dnorm(0, 1),
+      b_ad ~ dnorm(0, 1),
+      b_e ~ dnorm(0, 1),
+      sigma ~ dexp(1)
+      ), data = dlist, chains = 2, cores = 2
+
+)
+```
+
+```{r}
+model_mequal <- ulam(log_lik=TRUE,
+      alist(
+      Equality_s ~ dnorm(mu, sigma),
+      mu <- a[Swedish] + b_pop * Population_s + b_ret * Returned_s + b_p * Prereq_s + b_l * LearningOut_s + b_s * Structure_s + b_t * Teaching_s + b_li * Literature_s + b_a * Assessment_s + b_ad * Admin_s + b_w * Workload_s,
+      a[Swedish] ~ dnorm(0, 1),
+      b_pop ~ dnorm(0, 1),
+      b_ret ~ dnorm(0, 1),
+      b_p ~ dnorm(0, 1),
+      b_l ~ dnorm(0, 1),
+      b_s ~ dnorm(0, 1),
+      b_t ~ dnorm(0, 1),
+      b_li ~ dnorm(0, 1),
+      b_a ~ dnorm(0, 1),
+      b_ad ~ dnorm(0, 1),
+      b_w ~ dnorm(0, 1),
+      sigma ~ dexp(1)
+      ), data = dlist, chains = 2, cores = 2
+
+)
+```
+
 
 ```{r}
 model_mreturn <- ulam(log_lik=TRUE,
@@ -207,30 +326,42 @@ model_mtot <- ulam(log_lik=TRUE,
 
 )
 ```
+
 ## Saving the models so we do not have to re-run them all the time.
 ```{r}
-precis(model_m1, prob=0.9, digits = 3)
-precis(model_mequality_new, prob=0.9, digits = 3)
-precis(model_mwork, prob=0.9, digits = 3)
-precis(model_mteach, prob=0.9, digits = 3)
-precis(model_mtot, prob = 0.9, digits = 3)
-
-
-save(model_m1, model_mequality_new, model_mwork, model_mteach, model_mtot, file = "./data/model_real_out.RData")
+save(model_moverall, model_mprereq, model_mlearningout, model_mstruct, model_mteach, model_mlit, model_massess, model_madmin, model_mwork, model_mequal, model_mreturn, file = "./data/model_real_out.RData")
 
 ## Exporting the data from the models for plotting in seaborn
-data_m1 <- extract.samples(model_m1)
-data_mequality_new <- extract.samples(model_mequality_new)
-data_mwork <- extract.samples(model_mwork)
+data_moverall <- extract.samples(model_moverall)
+data_mprereq <- extract.samples(model_mprereq)
+data_mlearningout <- extract.samples(model_mlearningout)
+data_mstruct <- extract.samples(model_mstruct)
 data_mteach <- extract.samples(model_mteach)
-data_mtot <- extract.samples(model_mtot)
+data_mlit <- extract.samples(model_mlit)
+data_massess <- extract.samples(model_massess)
+data_madmin <- extract.samples(model_madmin)
+data_mwork <- extract.samples(model_mwork)
+data_mequal <- extract.samples(model_mequal)
+data_mreturn <- extract.samples(model_mreturn)
 
-save(data_m1, data_mequality_new, data_mwork, data_mteach, data_mtot, file = "./data/modeldata_real_out.RData")
+save(data_moverall, data_mprereq, data_mlearningout, data_mstruct, data_mteach, data_mlit, data_massess, data_madmin, data_mwork, data_mequal, data_mreturn, file = "./data/modeldata_real_out.RData")
 ```
 
 
 ```{r}
 load("./data/model_real_out.RData")
 load("./data/modeldata_real_out.RData")
+```
 
+```{r}
+precis(model_moverall, prob = 0.9, digits = 2)
+precis(model_mprereq, prob = 0.9, digits = 2)
+precis(model_mlearningout, prob = 0.9, digits = 2)
+precis(model_mstruct, prob = 0.9, digits = 2)
+precis(model_mteach, prob = 0.9, digits = 2)
+precis(model_mlit, prob = 0.9, digits = 2)
+precis(model_massess, prob = 0.9, digits = 2)
+precis(model_madmin, prob = 0.9, digits = 2)
+precis(model_mwork, prob = 0.9, digits = 2)
+precis(model_mequal, prob = 0.9, digits = 2)
 ```
